buildkit/k8s/deploy-arm.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: buildkitd-arm
  name: buildkitd-arm
  namespace: registry
spec:
  selector:
    matchLabels:
      app: buildkitd-arm
  template:
    metadata:
      labels:
        app: buildkitd-arm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm
      containers:
      - image: moby/buildkit:v0.12.2
        args:
        - --addr
        - tcp://0.0.0.0:1235
        name: buildkitd-arm
        ports:
        - containerPort: 1235
        securityContext:
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
    name: buildkitd-arm
    namespace: registry
spec:
  selector:
    app: buildkitd-arm
  ports:
    - port: 1235
      targetPort: 1235
  # type: ClusterIP
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildkitd-arm
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: buildkitd-arm.bookserver.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: buildkitd-arm
            port:
              number: 1235
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: buildkitd
#   namespace: registry
# spec:
#   rules:
#   - host: buildkit.bookserver.home
#       service:
#         name: buildkitd
#         port:
#           number: 1234
