buildkit/k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildkitd
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: buildkit.bookserver.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: buildkitd
            port:
              number: 1234
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: buildkitd
#   namespace: registry
# spec:
#   rules:
#   - host: buildkit.bookserver.home
#       service:
#         name: buildkitd
#         port:
#           number: 1234
